paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.compile.log
error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:67:35
   |
67 |     if !expect_type(get_id(0i32 + 0u32), 8) {
   |                                   ^^^^ expected `i32`, found `u32`

error[E0277]: cannot add `u32` to `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:67:33
   |
67 |     if !expect_type(get_id(0i32 + 0u32), 8) {
   |                                 ^ no implementation for `i32 + u32`
   |
   = help: the trait `Add<u32>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:70:35
   |
70 |     if !expect_type(get_id(0i64 + 0u64), 10) {
   |                                   ^^^^ expected `i64`, found `u64`

error[E0277]: cannot add `u64` to `i64`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:70:33
   |
70 |     if !expect_type(get_id(0i64 + 0u64), 10) {
   |                                 ^ no implementation for `i64 + u64`
   |
   = help: the trait `Add<u64>` is not implemented for `i64`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i64` implements `Add<i64>`
             `&i64` implements `Add`
             `i64` implements `Add<&i64>`
             `i64` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:73:36
   |
73 |     if !expect_type(get_id(0i128 + 0u128), 12) {
   |                                    ^^^^^ expected `i128`, found `u128`

error[E0277]: cannot add `u128` to `i128`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:73:34
   |
73 |     if !expect_type(get_id(0i128 + 0u128), 12) {
   |                                  ^ no implementation for `i128 + u128`
   |
   = help: the trait `Add<u128>` is not implemented for `i128`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i128` implements `Add<i128>`
             `&i128` implements `Add`
             `i128` implements `Add<&i128>`
             `i128` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:77:35
   |
77 |     if !expect_type(get_id(0i32 + 0i64), 9) {
   |                                   ^^^^ expected `i32`, found `i64`

error[E0277]: cannot add `i64` to `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:77:33
   |
77 |     if !expect_type(get_id(0i32 + 0i64), 9) {
   |                                 ^ no implementation for `i32 + i64`
   |
   = help: the trait `Add<i64>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:80:35
   |
80 |     if !expect_type(get_id(0i64 + 0i128), 11) {
   |                                   ^^^^^ expected `i64`, found `i128`

error[E0277]: cannot add `i128` to `i64`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:80:33
   |
80 |     if !expect_type(get_id(0i64 + 0i128), 11) {
   |                                 ^ no implementation for `i64 + i128`
   |
   = help: the trait `Add<i128>` is not implemented for `i64`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i64` implements `Add<i64>`
             `&i64` implements `Add`
             `i64` implements `Add<&i64>`
             `i64` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:83:35
   |
83 |     if !expect_type(get_id(0i32 + 0i128), 11) {
   |                                   ^^^^^ expected `i32`, found `i128`

error[E0277]: cannot add `i128` to `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:83:33
   |
83 |     if !expect_type(get_id(0i32 + 0i128), 11) {
   |                                 ^ no implementation for `i32 + i128`
   |
   = help: the trait `Add<i128>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:87:47
   |
87 |     if !expect_type(get_id((E::ENeg as i32) + 0u32), get_id(0i32 + 0u32)) {
   |                                               ^^^^ expected `i32`, found `u32`

error[E0277]: cannot add `u32` to `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:87:45
   |
87 |     if !expect_type(get_id((E::ENeg as i32) + 0u32), get_id(0i32 + 0u32)) {
   |                                             ^ no implementation for `i32 + u32`
   |
   = help: the trait `Add<u32>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:87:68
   |
87 |     if !expect_type(get_id((E::ENeg as i32) + 0u32), get_id(0i32 + 0u32)) {
   |                                                                    ^^^^ expected `i32`, found `u32`

error[E0277]: cannot add `u32` to `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/bool_char_int_c1/sample_002/target.rs:87:66
   |
87 |     if !expect_type(get_id((E::ENeg as i32) + 0u32), get_id(0i32 + 0u32)) {
   |                                                                  ^ no implementation for `i32 + u32`
   |
   = help: the trait `Add<u32>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.